# training-open-ai

./: .gitignore  README.md  docker-compose.yml  note-day1.md  note-day2.md  prompt-pr-3.md  prompt-pr-4.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/chatmodes/: plan.chatmode.md
backend/: .gitignore  Dockerfile  README.md  pyproject.toml  test_detection.sh
backend/app/: main.py
backend/app/routes/: detection.py  health.py  images.py  upload.py
backend/app/utils/: __init__.py  image_processing.py
backend/tests/: test_images.py  test_images_api.py
frontend/: Dockerfile  README.md  nginx.conf.template  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: DetectionOverlay.jsx
frontend/src/components/ui/: button.jsx  confirmation-modal.jsx  page-header.jsx  progress.jsx  toaster.jsx  use-toast.js
frontend/src/pages/: HomePage.jsx  ImagesPage.jsx  ImagesPage.test.jsx  UploadPage.jsx
